# marvin

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  NOTICE  README.md  TODO.md  action.yml  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/pytest/: action.yml
.github/actions/ruff/: action.yml
.github/workflows/: docker.yml  pre-commit.yml  reusable-docker.yml  reusable-lint.yml  reusable-pypi.yml  reusable-review-marketplace.yml  reusable-review-self.yml  reusable-test.yml  template_docker.yml  test.yml  workflow-publish.yml  workflow-review-marketplace.yml  workflow-review-self.yml  workflow-test.yml
ai_review/: config.py
ai_review/clients/azure_devops/: client.py
ai_review/clients/azure_openai/: client.py
ai_review/clients/bedrock/: client.py
ai_review/clients/bitbucket_cloud/: client.py
ai_review/clients/bitbucket_server/: client.py
ai_review/clients/claude/: client.py
ai_review/clients/gemini/: client.py
ai_review/clients/gitea/: client.py
ai_review/clients/github/: client.py
ai_review/clients/gitlab/: client.py
ai_review/clients/ollama/: client.py
ai_review/clients/openrouter/: client.py
ai_review/libs/config/: prompt.py
ai_review/prompts/: default_agent.md  default_system_agent.md
ai_review/resources/: pricing.yaml
ai_review/services/cost/: service.py  types.py
ai_review/services/diff/: tools.py
ai_review/services/git/: service.py
ai_review/services/policy/: service.py  types.py
ai_review/services/prompt/: service.py  tools.py  types.py
ai_review/services/review/: service.py
ai_review/tests/configs/: config-test.yaml
ci/review/: config.yaml
docs/: README.md
docs/ci/: Jenkinsfile  README.md  azure-devops.yaml  bitbucket.yaml  github.yaml  gitlab.yaml
docs/cli/: README.md
docs/clients/: README.md
docs/clients/llm/: bedrock.md
docs/configs/: .ai-review.json  .ai-review.yaml  .env.example  .marvin.json  .marvin.yaml  README.md
docs/hooks/: README.md
docs/prompts/: README.md
docs/troubleshooting/: README.md
src/marvin/: config.py
src/marvin/cli/: main.py
src/marvin/libs/: logger.py  text.py
src/marvin/prompts/: default_inline_reply.md  default_system_context.md  default_system_inline.md  default_system_inline_reply.md  default_system_summary.md  default_system_summary_reply.md
src/marvin/resources/: pricing.yaml
tests/: conftest.py
tests/configs/: config-test.yaml
tests/fixtures/clients/: azure_devops.py  azure_openai.py  bedrock.py  bitbucket_cloud.py  bitbucket_server.py  claude.py  gemini.py  gitea.py  github.py  gitlab.py  ollama.py  openai.py  openrouter.py
tests/fixtures/services/: artifacts.py  cost.py  diff.py  git.py  hook.py  llm.py  policy.py  prompt.py  vcs.py
tests/suites/cli/: test_main.py
(+357 files in other folders)
